--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,8 +1,20 @@
 {% extends "base.html" %}
-{% block content %}
-<div class="row">
-    <div class="col-md bg-primary">Column 1</div>
-    <div class="col-md bg-danger">Column 2</div>
-    <div class="col-md bg-success">Column 3</div>
-</div>
+{% load blog_extras %}
+    {% block content %}
+
+    <h2>Blog Posts</h2>
+    {% for post in posts %}
+    {% row "border-bottom" %}
+        {% col "border border-primary rounded" %}
+            <h3>{{ post.title }}</h3>
+            {% include 'blog/post-byline.html' %}
+            <p>{{ post.summary }}</p>
+            <p>
+                ({{ post.content|wordcount }} words)
+                <a href="{% url "blog-post-detail" post.slug %}">Read More</a>
+            </p>
+        {% endcol %}
+    {% endrow %}
+    {% endfor %}
 {% endblock %}
+
