--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-{% load blog_extras %}
+{% load blog_extras cache %}
     <h2>{{ post.title }}</h2>
     {% row %}
         {% col %}
@@ -15,7 +15,9 @@
     {% row %}
         {% col %}
             {% include "blog/post-comments.html" %}
-            {% recent_posts post %}
+            {% cache 3600 recent_posts post%}
+                {% recent_posts post %}
+            {% endcache %}
         {% endcol %}
     {% endrow %}
 {% endblock %}
