--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,8 +8,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>{% block title %} Welcome to Blango{% endblock %}</title>
   </head>
+  <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Blango Home</a>
+        <div class="d-flex">
+            {% if request.user.is_active %}
+                <a class="nav-link" href="{% url "profile" %}">Profile</a>
+                <form class = "logout" action ="{% url 'logout' %}" method ="post">
+                    {% csrf_token %}
+                    <button class = "btn btn-danger" type = "submit">Logout</button>
+                </form>
+            {% else %}
+                <a class="nav-link" href="{% url "login" %}">Log In</a>
+                <a class = "nav-link" href="{% url 'django_registration_register' %}">Sign Up!</a>
+            {% endif %}
+        </div>
+    </div>
+    </nav>
     <body>
     <div class = 'container-fluid'>
     {% block content %}
