--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
                     <button class = "btn btn-danger" type = "submit">Logout</button>
                 </form>
             {% else %}
+                <a class = "nav-link" href="{% url 'django_registration_register' %}">Register</a>
                 <a class="nav-link" href="{% url "login" %}">Log In</a>
-                <a class = "nav-link" href="{% url 'django_registration_register' %}">Sign Up!</a>
             {% endif %}
         </div>
     </div>
