--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -5,6 +5,14 @@
     {% row %}
         {% col %}
         {% include "blog/post-byline.html" %}
+            {% if post.hero_image %}
+                {% row %}
+                    {% col %}
+                        <img class = "img-fluid" src = "{{post.hero_image.url}}">
+                    {% endcol %}
+                {% endrow %}
+            {% endif %}
+
         {% endcol %}
     {%endrow%}
     {% row %}
